--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
        <h1>Projects</h1>
        <ul>
-           <li><a href="">Trave to France</a></li>
+           <li><a href="#adskhfkjdsf">Trave to France</a></li>
        </ul>
     </body>
 </html>
