--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
        <h1>Projects</h1>
        <ul>
-           <li><a href="https://soccerstar-texa.traveltofrance.github.io/">Trave to Frances</a></li>
+           <li><a href="France.html">Trave to Frances</a></li>
        </ul>
     </body>
 </html>
