--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
        <h1>Projects</h1>
        <ul>
-           <li><a href="France.html">Trave to Frances</a></li>
+           <li><a href="France.html">Trave to Francess</a></li>
        </ul>
     </body>
 </html>
