--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
    <body>
        <h1>Projects</h1>
        <ul>
-           <li><a href="France.html">Trave to Francesss</a></li>
+           <li><a href="France.html">Trave to France</a></li>
+           <li><a href="book.html">Recipe Book</a></li>
        </ul>
     </body>
 </html>
