--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Projects</title>
         <style>
+            body{
+                background-color:#add8e6;
+            }
       </style>
     </head>
    <body>
