--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             }
             #projects-rule{
                 color:white;
+                font-size:75px;
             }
             .projects-1-2{
             font-size:75px;
@@ -23,6 +24,7 @@
        <ul class="projects-1-2">
            <li><a href="France.html">Trave to France</a></li>
            <li><a href="book.html">Recipe Book</a></li>
+           <li><a href="blog.html">Blog</a></li>
        </ul>
     </body>
 </html>
