--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
             .projects-1-2{
             font-size:75px;
             }
+            #post-date{
+            color:white;
+                font-size:75px;
+            }
             
                 
       </style>
     </head>
    <body>
        <h1 id="projects-rule">Projects</h1>
+       <h6 id="post-date">Made by:Sahil Mehta</h6>
        <ul class="projects-1-2">
            <li><a href="France.html">Trave to France</a></li>
            <li><a href="book.html">Recipe Book</a></li>
