--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <ul class="projects-1-2">
            <li><a href="France.html">Trave to France</a></li>
            <li><a href="book.html">Recipe Book</a></li>
-           <li><a href="blog.html">Blogs</a></li>
+           <li><a href="blog.html">Blog</a></li>
        </ul>
        
        <viedo width="420" height="345" src="https://drive.google.com/file/d/1Tdg_ePnYRSqwHdfqh3tHqUnTJ6Zpa48R/view?usp=sharing">
