--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
            <li><a href="book.html">Recipe Book</a></li>
            <li><a href="blog.html">Blog</a></li>
        </ul>
+       <iframe src="https://drive.google.com/file/d/1oxwwhxWwln7ianN7XAzUfCDHdcmED0nv/preview" width="640" height="480"></iframe>
       
 </body>
 </html>
