--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ li a {
 }
 
 li a:hover:not(.active) {
-  background-color:#22aef0;
+  background-color:#22AEF0;
 }
 
 .active {
-  background-color: #4CAF50 #111;
+  background-color:  #111;
 }
             
                 
@@ -57,7 +57,7 @@ li a:hover:not(.active) {
     </head>
    <body>
        <ul class="active">
-  <li><a  href="France.html">Travel To France</a></li>
+  <li><a  href="France.html">Travel To France!</a></li>
   <li><a href="book.html">Recipe Book</a></li>
   <li><a href="blog.html">Blog</a></li>
   
