--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ li a:hover:not(.active) {
     </head>
    <body>
        <ul class="active">
+   
+  <li><a  href="index.html">Home Page</a></li>        
   <li><a  href="France.html">Travel To France!</a></li>
   <li><a href="book.html">Recipe Book</a></li>
   <li><a href="blog.html">Blog</a></li>
