--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ li a {
   text-decoration: none;
 }
 
-li a:hover:not(.active) {
+li a:hover:not(.jhadskhd) {
   background-color:#22AEF0;
 }
 
-.active {
+.jhadskhd {
   background-color:  #111;
 }
             
@@ -56,13 +56,12 @@ li a:hover:not(.active) {
       </style>
     </head>
    <body>
-       <ul class="active">
-   
-  <li><a  href="index.html">Home Page</a></li>        
+       <ul class="jhadskhd">
   <li><a  href="France.html">Travel To France!</a></li>
   <li><a href="book.html">Recipe Book</a></li>
   <li><a href="blog.html">Blog</a></li>
-  <li style="float:right"><a href="about.html">About</a></li>
+  
+ 
   
 </ul>
 
