--- a/blog.html
+++ b/blog.html
@@ -112,6 +112,7 @@
             <li><a id="ila" href="index.html">Home</a></li>
             <li><a id="ila" href="France.html">Travel To France!</a></li>
             <li><a id="ila" href="book.html">Recipe Book</a></li>
+             <li><a id="ila" href="blog.html">Blog</a></li>
             <li><a id="ila" href="about.html">About</a></li>
           </ul>
         <h1 id="sahil-blog">Sahil's blog</h1>
