--- a/book.html
+++ b/book.html
@@ -88,6 +88,7 @@
             <li><a id="ila" href="index.html">Home</a></li>
             <li><a id="ila" href="France.html">Travel To France!</a></li>
             <li><a id="ila" href="book.html">Recipe Book</a></li>
+             <li><a id="ila" href="blog.html">Blog</a></li>
             <li><a id="ila" href="about.html">About</a></li>
           </ul>
         <h1 id="starterheading">Sahil's Recipe Book</h1>
