--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ li a:hover:not(.jhadskhd) {
   <li><a  href="France.html">Travel To France!</a></li>
   <li><a href="book.html">Recipe Book</a></li>
   <li><a href="blog.html">Blog</a></li>
-  <li style="float:right"><a href="about.html">About</a></li>
+  <li style="float:right;"><a href="about.html">About</a></li>
  
   
 </ul>
