--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ li a:hover:not(.jhadskhd) {
 </ul>
 
        <h1 id="projects-rule">Projects</h1>
-       <h6 id="post-date">Made by:Sahil Mehta</h6>
+       <h6 id="post-date">Made by:Sahil Mehtas</h6>
      
        <iframe src="https://drive.google.com/file/d/1oxwwhxWwln7ianN7XAzUfCDHdcmED0nv/preview" width="640" height="480"></iframe>
       
