--- a/book.html
+++ b/book.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project: Recipe book</title>
         <meta charset="utf-8">
+        <title>Project: Recipe book</title>
+        <link rel="shortcut icon" type="image/png" href="iphone.png">
+        
         <style>
         body{
             background-color:rgb(8, 213, 245);
