--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Projects</title>
-        <link rel="shortcut icon" type="image/png" href="https://soccerstar-texa.github.io/iphone.png">
+        <link rel="shortcut icon"  href="https://soccerstar-texa.github.io/iphone.png">
         <style>
             body{
                 background-color:#add8e6;
